--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "ion2-calendar",
-  "version": "3.5.0",
+  "version": "4.0.0",
   "description": "A date picker component for ionic2 ",
   "main": "./dist/index.js",
   "typings": "./dist/index.d.ts",
   "scripts": {
     "start": "cd ./dev && npm start",
-    "clean:dist": "rm -rf dist",
+    "clean:dist": "rimraf dist",
     "demo:link": "npm link && cd ./demo && npm link ion2-calendar",
     "demo:serve": "cd ./demo && ionic serve",
     "build": "run-s clean:dist build:copy-sources build:compile-scss build:ts",
@@ -22,31 +22,31 @@
     "url": "https://github.com/HsuanXyz/ion2-calendar.git"
   },
   "devDependencies": {
-    "@angular/common": "7.1.4",
-    "@angular/compiler": "7.1.4",
-    "@angular/compiler-cli": "^7.2.9",
-    "@angular/core": "7.1.4",
-    "@angular/forms": "7.1.4",
-    "@angular/http": "7.1.4",
-    "@angular/platform-browser": "7.1.4",
-    "@angular/platform-browser-dynamic": "7.1.4",
-    "@angular/router": "7.1.4",
-    "@ionic/angular": "4.0.0-rc.0",
+    "@angular/common": "16.1.1",
+    "@angular/compiler": "16.1.1",
+    "@angular/compiler-cli": "^16.1.1",
+    "@angular/core": "16.1.1",
+    "@angular/forms": "16.1.1",
+    "@angular/platform-browser": "16.1.1",
+    "@angular/platform-browser-dynamic": "16.1.1",
+    "@angular/router": "16.1.1",
+    "@ionic/angular": "7.0.14",
     "gulp": "^4.0.0",
     "gulp-bump": "^3.0.0",
     "gulp-clean": "^0.4.0",
     "gulp-ext-replace": "^0.3.0",
-    "gulp-sass": "^4.0.1",
+    "gulp-sass": "^5.1.0",
     "ionicons": "5.1.2",
     "moment": "^2.23.0",
-    "ng-packagr": "^2.0.0",
+    "ng-packagr": "^16.1.0",
+    "node-sass": "^9.0.0",
     "npm-run-all": "^4.1.2",
-    "rxjs": "6.3.3",
-    "tsickle": "^0.27.2",
+    "rimraf": "^5.0.1",
+    "rxjs": "7.5.0",
     "tslint": "~5.7.0",
     "tslint-eslint-rules": "^4.1.1",
-    "typescript": "~3.1.3",
-    "zone.js": "0.8.26"
+    "typescript": "~4.9.4",
+    "zone.js": "~0.13.1"
   },
   "keywords": [
     "ionic2",
